# a10-guardian

./: .dockerignore  .env.example  .gitignore  API_MCP_COMPARISON.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
docs/: API_USAGE.md  INTEGRATION_GUIDE.md  MCP_USAGE.md  N8N_INTEGRATION.json  README.md
docs/examples/: gaming-template.json
src/a10_guardian/: main.py  mcp_server.py
src/a10_guardian/api/v1/: api.py
src/a10_guardian/api/v1/endpoints/: attacks.py  mitigation.py  system.py  templates.py
src/a10_guardian/core/: client.py  config.py  dependencies.py  exceptions.py  limiter.py  logging.py
src/a10_guardian/schemas/: __init__.py  attack.py  common.py  mitigation.py  system.py  template.py
src/a10_guardian/services/: attack_service.py  auth_service.py  mitigation_service.py  notification_service.py  system_service.py  template_service.py  zone_change_service.py
tests/: README.md  manual_test_claude_api.py  manual_test_mcp.py  manual_test_mcp_simple.py  manual_test_mcp_tools.py  test_api_endpoints.py  test_auth_service.py  test_client.py  test_health.py  test_mcp_integration.py  test_mitigation_service.py  test_notification_service.py  test_system_service.py  test_zone_change_service.py  verify_mcp_runtime.py
tests/integration/: test_integration.py
tests/performance/: locustfile.py
